[gd_scene load_steps=4 format=3 uid="uid://bvorf6qptqxej"]

[ext_resource type="Script" path="res://Scene/BaseScene/base_scene.gd" id="1_gwi6o"]
[ext_resource type="Texture2D" uid="uid://dgbe8puaplb6m" path="res://icon.svg" id="1_osfmn"]
[ext_resource type="PackedScene" uid="uid://c5vtntw4vu6n" path="res://Scene/RouteSelectionScene/route_selection_scene.tscn" id="2_7vr7o"]

[node name="BaseScene" type="Node2D" node_paths=PackedStringArray("secondary_scene_root", "route_selection_scene")]
script = ExtResource("1_gwi6o")
secondary_scene_root = NodePath("SecondarySceneRoot")
route_selection_scene = NodePath("SecondarySceneRoot/RouteSelectionScene")

[node name="SecondarySceneRoot" type="Node2D" parent="."]

[node name="RouteSelectionScene" parent="SecondarySceneRoot" instance=ExtResource("2_7vr7o")]

[node name="UI" type="CanvasLayer" parent="."]

[node name="ButtonContainer" type="HBoxContainer" parent="UI"]
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -128.0
grow_horizontal = 2
grow_vertical = 0
alignment = 1

[node name="RouteSelectionButton" type="TextureButton" parent="UI/ButtonContainer"]
layout_mode = 2
texture_normal = ExtResource("1_osfmn")

[connection signal="pressed" from="UI/ButtonContainer/RouteSelectionButton" to="." method="_on_route_selection_button_pressed"]
